@startuml

skinparam dpi 300

title __Domain Model Class Diagram__\n


      class tech.eportfolio.server.model.Activity {
          - createdDate : Date
          - deleted : boolean
          - id : String
          - parentId : String
          - username : String
          + Activity()
          + Activity()
          {static} + builder()
          + equals()
          + getActivityType()
          + getCreatedDate()
          + getId()
          + getParentId()
          + getParentType()
          + getUsername()
          + hashCode()
          + isDeleted()
          + setActivityType()
          + setCreatedDate()
          + setDeleted()
          + setId()
          + setParentId()
          + setParentType()
          + setUsername()
          + toString()
          # canEqual()
      }



      class tech.eportfolio.server.model.Activity.ActivityBuilder {
          - createdDate : Date
          - deleted : boolean
          - id : String
          - parentId : String
          - username : String
          + activityType()
          + build()
          + createdDate()
          + deleted()
          + id()
          + parentId()
          + parentType()
          + toString()
          + username()
          ~ ActivityBuilder()
      }

  

      class tech.eportfolio.server.model.FeedHistory {
          - createdDate : Date
          - deleted : boolean
          - feedItems : Set<String>
          - id : String
          - updatedDate : Date
          - userId : String
          + FeedHistory()
          + FeedHistory()
          {static} + builder()
          + equals()
          + getCreatedDate()
          + getFeedItems()
          + getId()
          + getUpdatedDate()
          + getUserId()
          + hashCode()
          + isDeleted()
          + setCreatedDate()
          + setDeleted()
          + setFeedItems()
          + setId()
          + setUpdatedDate()
          + setUserId()
          + toString()
          # canEqual()
      }


      class tech.eportfolio.server.model.FeedHistory.FeedHistoryBuilder {
          - createdDate : Date
          - deleted : boolean
          - feedItems : Set<String>
          - id : String
          - updatedDate : Date
          - userId : String
          + build()
          + createdDate()
          + deleted()
          + feedItems()
          + id()
          + toString()
          + updatedDate()
          + userId()
          ~ FeedHistoryBuilder()
      }


      class tech.eportfolio.server.model.Portfolio {
          - content : DBObject
          - coverImage : String
          - createdDate : Date
          - deleted : boolean
          - description : String
          - id : String
          - music : String
          {static} - serialVersionUID : long
          - title : String
          - updatedDate : Date
          - userId : String
          - username : String
          + Portfolio()
          + Portfolio()
          {static} + builder()
          + equals()
          + getContent()
          + getCoverImage()
          + getCreatedDate()
          + getDescription()
          + getId()
          + getMusic()
          + getTitle()
          + getUpdatedDate()
          + getUserId()
          + getUsername()
          + getVisibility()
          + hashCode()
          + isDeleted()
          + setContent()
          + setCoverImage()
          + setCreatedDate()
          + setDeleted()
          + setDescription()
          + setId()
          + setMusic()
          + setTitle()
          + setUpdatedDate()
          + setUserId()
          + setUsername()
          + setVisibility()
          + toString()
          # canEqual()
      }


      class tech.eportfolio.server.model.Portfolio.PortfolioBuilder {
          - content : DBObject
          - coverImage : String
          - createdDate : Date
          - deleted : boolean
          - description : String
          - id : String
          - music : String
          - title : String
          - updatedDate : Date
          - userId : String
          - username : String
          + build()
          + content()
          + coverImage()
          + createdDate()
          + deleted()
          + description()
          + id()
          + music()
          + title()
          + toString()
          + updatedDate()
          + userId()
          + username()
          + visibility()
          ~ PortfolioBuilder()
      }

  

      class tech.eportfolio.server.model.Tag {
          - createdBy : String
          - createdDate : Date
          - deleted : boolean
          - icon : String
          - id : String
          - name : String
          - updatedDate : Date
          + Tag()
          + Tag()
          {static} + builder()
          + equals()
          + getCreatedBy()
          + getCreatedDate()
          + getIcon()
          + getId()
          + getName()
          + getUpdatedDate()
          + hashCode()
          + isDeleted()
          + setCreatedBy()
          + setCreatedDate()
          + setDeleted()
          + setIcon()
          + setId()
          + setName()
          + setUpdatedDate()
          + toString()
          # canEqual()
      }


      class tech.eportfolio.server.model.Tag.TagBuilder {
          - createdBy : String
          - createdDate : Date
          - deleted : boolean
          - icon : String
          - id : String
          - name : String
          - updatedDate : Date
          + build()
          + createdBy()
          + createdDate()
          + deleted()
          + icon()
          + id()
          + name()
          + toString()
          + updatedDate()
          ~ TagBuilder()
      }

  

      class tech.eportfolio.server.model.Template {
          - boilerplate : DBObject
          - createdDate : Date
          - deleted : boolean
          - description : String
          - hidden : boolean
          - id : String
          - title : String
          - updatedDate : Date
          + Template()
          + Template()
          {static} + builder()
          + equals()
          + getBoilerplate()
          + getCreatedDate()
          + getDescription()
          + getId()
          + getTitle()
          + getUpdatedDate()
          + hashCode()
          + isDeleted()
          + isHidden()
          + setBoilerplate()
          + setCreatedDate()
          + setDeleted()
          + setDescription()
          + setHidden()
          + setId()
          + setTitle()
          + setUpdatedDate()
          + toString()
          # canEqual()
      }


      class tech.eportfolio.server.model.Template.TemplateBuilder {
          - boilerplate : DBObject
          - createdDate : Date
          - deleted : boolean
          - description : String
          - hidden : boolean
          - id : String
          - title : String
          - updatedDate : Date
          + boilerplate()
          + build()
          + createdDate()
          + deleted()
          + description()
          + hidden()
          + id()
          + title()
          + toString()
          + updatedDate()
          ~ TemplateBuilder()
      }

      class tech.eportfolio.server.model.User {
          - authorities : String[]
          - avatarUrl : String
          - blobUUID : String
          - createdDate : Date
          - deleted : boolean
          - email : String
          - enabled : boolean
          - firstName : String
          - id : String
          - lastName : String
          - locked : boolean
          - organisation : String
          - password : String
          - phone : String
          - roles : String
          {static} - serialVersionUID : long
          - title : String
          - updatedDate : Date
          - username : String
          + User()
          + User()
          {static} + builder()
          + equals()
          + getAuthorities()
          + getAvatarUrl()
          + getBlobUUID()
          + getCreatedDate()
          + getEmail()
          + getFirstName()
          + getId()
          + getLastName()
          + getOrganisation()
          + getPassword()
          + getPhone()
          + getRoles()
          + getTitle()
          + getUpdatedDate()
          + getUsername()
          + hashCode()
          + isDeleted()
          + isEnabled()
          + isLocked()
          + setAuthorities()
          + setAvatarUrl()
          + setBlobUUID()
          + setCreatedDate()
          + setDeleted()
          + setEmail()
          + setEnabled()
          + setFirstName()
          + setId()
          + setLastName()
          + setLocked()
          + setOrganisation()
          + setPassword()
          + setPhone()
          + setRoles()
          + setTitle()
          + setUpdatedDate()
          + setUsername()
          + toString()
          {static} + unverifiedUser()
          # canEqual()
      }

      class tech.eportfolio.server.model.User.UserBuilder {
          - authorities : String[]
          - avatarUrl : String
          - blobUUID : String
          - createdDate : Date
          - deleted : boolean
          - email : String
          - enabled : boolean
          - firstName : String
          - id : String
          - lastName : String
          - locked : boolean
          - organisation : String
          - password : String
          - phone : String
          - roles : String
          - title : String
          - updatedDate : Date
          - username : String
          + authorities()
          + avatarUrl()
          + blobUUID()
          + build()
          + createdDate()
          + deleted()
          + email()
          + enabled()
          + firstName()
          + id()
          + lastName()
          + locked()
          + organisation()
          + password()
          + phone()
          + roles()
          + title()
          + toString()
          + updatedDate()
          + username()
          ~ UserBuilder()
      }

      class tech.eportfolio.server.model.UserComment {
          - content : String
          - createdDate : Date
          - deleted : boolean
          - id : String
          - parentId : String
          - portfolioId : String
          - updatedDate : Date
          - userId : String
          - username : String
          + UserComment()
          + UserComment()
          {static} + builder()
          + equals()
          + getContent()
          + getCreatedDate()
          + getId()
          + getParentId()
          + getPortfolioId()
          + getUpdatedDate()
          + getUserId()
          + getUsername()
          + hashCode()
          + isDeleted()
          + setContent()
          + setCreatedDate()
          + setDeleted()
          + setId()
          + setParentId()
          + setPortfolioId()
          + setUpdatedDate()
          + setUserId()
          + setUsername()
          + toString()
          # canEqual()
      }

      class tech.eportfolio.server.model.UserComment.UserCommentBuilder {
          - content : String
          - createdDate : Date
          - deleted : boolean
          - id : String
          - parentId : String
          - portfolioId : String
          - updatedDate : Date
          - userId : String
          - username : String
          + build()
          + content()
          + createdDate()
          + deleted()
          + id()
          + parentId()
          + portfolioId()
          + toString()
          + updatedDate()
          + userId()
          + username()
          ~ UserCommentBuilder()
      }

      class tech.eportfolio.server.model.UserFollow {
          - createdDate : Date
          - deleted : boolean
          - destinationUsername : String
          - id : String
          - sourceUserId : String
          - sourceUsername : String
          + UserFollow()
          + UserFollow()
          {static} + builder()
          + equals()
          + getCreatedDate()
          + getDestinationUsername()
          + getId()
          + getSourceUserId()
          + getSourceUsername()
          + hashCode()
          + isDeleted()
          + setCreatedDate()
          + setDeleted()
          + setDestinationUsername()
          + setId()
          + setSourceUserId()
          + setSourceUsername()
          + toString()
          # canEqual()
      }

      class tech.eportfolio.server.model.UserFollow.UserFollowBuilder {
          - createdDate : Date
          - deleted : boolean
          - destinationUsername : String
          - id : String
          - sourceUserId : String
          - sourceUsername : String
          + build()
          + createdDate()
          + deleted()
          + destinationUsername()
          + id()
          + sourceUserId()
          + sourceUsername()
          + toString()
          ~ UserFollowBuilder()
      }

      class tech.eportfolio.server.model.UserLike {
          - createdDate : Date
          - deleted : boolean
          - id : String
          - portfolioId : String
          - userId : String
          - username : String
          + UserLike()
          + UserLike()
          {static} + builder()
          + equals()
          + getCreatedDate()
          + getId()
          + getPortfolioId()
          + getUserId()
          + getUsername()
          + hashCode()
          + isDeleted()
          + setCreatedDate()
          + setDeleted()
          + setId()
          + setPortfolioId()
          + setUserId()
          + setUsername()
          + toString()
          # canEqual()
      }


      class tech.eportfolio.server.model.UserLike.UserLikeBuilder {
          - createdDate : Date
          - deleted : boolean
          - id : String
          - portfolioId : String
          - userId : String
          - username : String
          + build()
          + createdDate()
          + deleted()
          + id()
          + portfolioId()
          + toString()
          + userId()
          + username()
          ~ UserLikeBuilder()
      }


      class tech.eportfolio.server.model.UserPrincipal {
          + UserPrincipal()
          + getAuthorities()
          + getPassword()
          + getUsername()
          + isAccountNonExpired()
          + isAccountNonLocked()
          + isCredentialsNonExpired()
          + isEnabled()
      }

      class tech.eportfolio.server.model.UserTag {
          - deleted : boolean
          - id : String
          - tagId : String
          - userId : String
          - username : String
          + UserTag()
          + UserTag()
          {static} + builder()
          + equals()
          + getId()
          + getTagId()
          + getUserId()
          + getUsername()
          + hashCode()
          + isDeleted()
          + setDeleted()
          + setId()
          + setTagId()
          + setUserId()
          + setUsername()
          + toString()
          # canEqual()
      }


      class tech.eportfolio.server.model.UserTag.UserTagBuilder {
          - deleted : boolean
          - id : String
          - tagId : String
          - userId : String
          - username : String
          + build()
          + deleted()
          + id()
          + tagId()
          + toString()
          + userId()
          + username()
          ~ UserTagBuilder()
      }

  tech.eportfolio.server.model.Activity .up.|> java.io.Serializable
  tech.eportfolio.server.model.Activity o-- tech.eportfolio.server.common.constant.ActivityType : activityType
  tech.eportfolio.server.model.Activity o-- tech.eportfolio.server.common.constant.ParentType : parentType
  tech.eportfolio.server.model.Activity +-down- tech.eportfolio.server.model.Activity.ActivityBuilder
  tech.eportfolio.server.model.Activity.ActivityBuilder o-- tech.eportfolio.server.common.constant.ActivityType : activityType
  tech.eportfolio.server.model.Activity.ActivityBuilder o-- tech.eportfolio.server.common.constant.ParentType : parentType
  tech.eportfolio.server.model.FeedHistory .up.|> java.io.Serializable
  tech.eportfolio.server.model.FeedHistory +-down- tech.eportfolio.server.model.FeedHistory.FeedHistoryBuilder
  tech.eportfolio.server.model.Portfolio .up.|> java.io.Serializable
  tech.eportfolio.server.model.Portfolio o-- tech.eportfolio.server.common.constant.Visibility : visibility
  tech.eportfolio.server.model.Portfolio +-down- tech.eportfolio.server.model.Portfolio.PortfolioBuilder
  tech.eportfolio.server.model.Portfolio.PortfolioBuilder o-- tech.eportfolio.server.common.constant.Visibility : visibility
  tech.eportfolio.server.model.Tag .up.|> java.io.Serializable
  tech.eportfolio.server.model.Tag +-down- tech.eportfolio.server.model.Tag.TagBuilder
  tech.eportfolio.server.model.Template .up.|> java.io.Serializable
  tech.eportfolio.server.model.Template +-down- tech.eportfolio.server.model.Template.TemplateBuilder
  tech.eportfolio.server.model.User .up.|> java.io.Serializable
  tech.eportfolio.server.model.User +-down- tech.eportfolio.server.model.User.UserBuilder
  tech.eportfolio.server.model.UserComment .up.|> java.io.Serializable
  tech.eportfolio.server.model.UserComment +-down- tech.eportfolio.server.model.UserComment.UserCommentBuilder
  tech.eportfolio.server.model.UserFollow .up.|> java.io.Serializable
  tech.eportfolio.server.model.UserFollow +-down- tech.eportfolio.server.model.UserFollow.UserFollowBuilder
  tech.eportfolio.server.model.UserLike .up.|> java.io.Serializable
  tech.eportfolio.server.model.UserLike +-down- tech.eportfolio.server.model.UserLike.UserLikeBuilder
  tech.eportfolio.server.model.UserPrincipal .up.|> java.io.Serializable
  tech.eportfolio.server.model.UserPrincipal .up.|> org.springframework.security.core.userdetails.UserDetails
  tech.eportfolio.server.model.UserPrincipal o-- tech.eportfolio.server.model.User : user
  tech.eportfolio.server.model.UserTag .up.|> java.io.Serializable
  tech.eportfolio.server.model.UserTag +-down- tech.eportfolio.server.model.UserTag.UserTagBuilder


@enduml
